<resources>
    <!-- App name -->
    <string name="app_name">Beacons</string>

    <!-- FormsTitle -->
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>

    <!-- Hints -->
    <string name="enterPasswordHint">Enter your password…</string>
    <string name="enterEmailHint">Enter your email…</string>
    <string name="enterNameHint">Enter your name…</string>
    <string name="enterSurnameHint">Enter your surname…</string>
    <string name="createAccount">No account yet? Create one…</string>

    <!-- Buttons -->
    <string name="loginButton">Login</string>
    <string name="registerButton">Create a new account</string>

    <!-- Titles always UPPERCASE -->
    <string name="registerTitle">REGISTER</string>
    <string name="loginTitle">LOGIN</string>

    <!-- new ones -->
    <string name="buttonFindBeacon">Search beacons</string>
    <string name="askForLocationPermissionsTitle">Location Permissions needed</string>
    <string name="askForLocationPermissionsMessage">We need location permissions to find the beacons</string>
    <string name="turnOnLocationMessage">Please turn on the Location</string>
    <string name="ok">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="registerError">Register error</string>
    <string name="somethingWasWrong">Something was wrong</string>
    <string name="registerSuccessfulTitle">Register successful</string>
    <string name="registerSuccessful">The registration was successful</string>
    <string name="stopSearch">Stop Search</string>
    <string name="contentDescriptionImage">Maspalomas</string>
    <string name="forgottenButton">Send new password</string>
    <string name="forgottenPassword">Forgot password?</string>
    <string name="sendPassword">Send a new password</string>
    <string name="refresh">Refresh</string>
    <string name="localsAround">Locals Around</string>
    <string name="local">Local</string>
    <string name="information">Information</string>
    <string name="title_activity_maps">Map</string>
    <string name="found">You have found: </string>
    <string name="errorLoadingPlaceInBeaconsFinder">We cannot locate the beacon in our system,
        it will be loaded all the places in our database</string>
    <string name="errorLoading">Error Loading Data</string>
    <string name="errorLoadingLocal">Something was wrong getting the local, try again later</string>
    <string name="grantLocationPermissions">You need to granted location permissions</string>
    <string name="permissionsRequired">Permissions required</string>
    <string name="emailError">Fill Email</string>
    <string name="emailMissedText">The email field must be filled in order to log in</string>
    <string name="passwordError">Password too short</string>
    <string name="passwordTooShort">The password needs to have at least 6 characters</string>
    <string name="loginError">Login error</string>
    <string name="incorrectCredentials">Login or password incorrect, check your credentials again</string>
    <string name="emptyFields">Please, introduce all the fields</string>
    <string name="resetPasswordError">Reset password error</string>
    <string name="wrongEmail">Email incorrect, check your email again</string>
    <string name="notFound">notFound</string>
    <string name="localsAroundButton">See the locals around this beacon!</string>
    <string name="description">Description:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>

</resources>
