<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerTitle"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/name-title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enterNameHint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/surname-title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/surnameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/enterSurnameHint" />

        <TextView
            android:id="@+id/email-title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/enterEmailHint" />

        <TextView
            android:id="@+id/password-title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/enterPasswordHint"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerButton" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:foregroundGravity="center"
            android:visibility="invisible"/>


    </LinearLayout>
</FrameLayout>